[gd_scene load_steps=14 format=3 uid="uid://bjgcs6wl6wlmd"]

[ext_resource type="Script" path="res://Enemigos/enemy.gd" id="1_p5yog"]
[ext_resource type="Texture2D" uid="uid://dgs80ep4qlsvt" path="res://Assets/smw_enemies_sheet.png" id="2_hv6ts"]
[ext_resource type="Texture2D" uid="uid://b8qajynkwtvjg" path="res://Assets/smw_enemies_sheet_CAMBIO.png" id="3_l4jq8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t4vnj"]
atlas = ExtResource("2_hv6ts")
region = Rect2(132, 0, 18, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymnx1"]
atlas = ExtResource("2_hv6ts")
region = Rect2(92, 0, 18, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_5o35d"]
atlas = ExtResource("3_l4jq8")
region = Rect2(292, 0, 18, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7xpv"]
atlas = ExtResource("3_l4jq8")
region = Rect2(330, 0, 18, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsy4n"]
atlas = ExtResource("2_hv6ts")
region = Rect2(12, 0, 16, 22)

[sub_resource type="SpriteFrames" id="SpriteFrames_gb81n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4vnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymnx1")
}],
"loop": true,
"name": &"run_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5o35d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7xpv")
}],
"loop": true,
"name": &"run_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsy4n")
}],
"loop": true,
"name": &"stand",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7wtvr"]
size = Vector2(16, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d4kr2"]
size = Vector2(14, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4slw8"]
size = Vector2(14, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r8p5r"]
size = Vector2(12, 13)

[node name="Koopa" type="CharacterBody2D"]
script = ExtResource("1_p5yog")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_gb81n")
animation = &"stand"

[node name="Timer" type="Timer" parent="."]

[node name="InteractionPoints" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionPoints"]
position = Vector2(-1, -2)
shape = SubResource("RectangleShape2D_7wtvr")

[node name="CollisionShape2D_stand" type="CollisionShape2D" parent="InteractionPoints"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_d4kr2")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(2, -1.5)
scale = Vector2(3.6, 0.45)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, -1.5)
shape = SubResource("RectangleShape2D_4slw8")

[node name="CollisionShape2D_stand" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_r8p5r")

[connection signal="area_entered" from="InteractionPoints" to="." method="_on_interaction_points_area_entered"]
[connection signal="area_exited" from="InteractionPoints" to="." method="_on_interaction_points_area_exited"]
